validation of experiences done except rout map JSON

--- a/naturet/views/experiences/detail.hbs
+++ b/naturet/views/experiences/detail.hbs
@@ -7,7 +7,6 @@
         <a href="">Some description</a>
         <a href="">map</a>
         <a href="/profile">profile</a>
-        <a class="btn btn danger" href="/experiences/{{experience.id}}/edit">Edit experience</a>
       </div>
     </div>
 
@@ -70,7 +69,7 @@
           </div>
           <div class="mb-2">
             <h3>Duracion</h3><small>El tiempo de duración una vez comienza la actividad, siempre en minutos</small>
-            <h4>{{experience.duration}}'</h4>
+            <h4>{{experience.duration}} minutos</h4>
             <hr>
           </div>
 
