--- a/naturet/public/stylesheets/style.css
+++ b/naturet/public/stylesheets/style.css
@@ -1,9 +1,164 @@
 /* Possible colors :  /*#00aad2*/
 
+/* carusel start */
 
+/* Slider */
+.image-slide-inside{
+  max-width: 100%;
+  height: 250px;
+  background: url('https://res.cloudinary.com/dwta0wgpp/image/upload/v1549223454/test/background-intro.jpg.jpg');
+  background-size: cover;
+  background-position: center;
+}
+
+.experience-card-description{
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 150px;
+}
+
+.container-slider-2{
+  margin-top: 50px;
+  margin-bottom: 100px;
+}
+
+.image-slide-inside-recommended{
+  border-radius: 7px;
+  max-width: 100%;
+  height: 350px;
+  background: url('https://picsum.photos/500');
+  background-size: cover;
+  background-position: center;
+}
+
+
+
+.container-slider{
+  max-width: 1300px
+}
+
+.slick-prev:before, .slick-next:before{
+  color:red;
+}
+
+.slick-slide {
+    margin: 0px 10px;
+}
+
+.slick-slide img {
+    width: 100%;
+}
+
+.slick-slider
+{
+    position: relative;
+    display: block;
+    box-sizing: border-box;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+            user-select: none;
+    -webkit-touch-callout: none;
+    -khtml-user-select: none;
+    -ms-touch-action: pan-y;
+        touch-action: pan-y;
+    -webkit-tap-highlight-color: transparent;
+}
+
+.slick-list
+{
+    position: relative;
+    display: block;
+    overflow: hidden;
+    margin: 0;
+    padding: 0;
+}
+.slick-list:focus
+{
+    outline: none;
+}
+.slick-list.dragging
+{
+    cursor: pointer;
+    cursor: hand;
+}
+
+.slick-slider .slick-track,
+.slick-slider .slick-list
+{
+    -webkit-transform: translate3d(0, 0, 0);
+       -moz-transform: translate3d(0, 0, 0);
+        -ms-transform: translate3d(0, 0, 0);
+         -o-transform: translate3d(0, 0, 0);
+            transform: translate3d(0, 0, 0);
+}
+
+.slick-track
+{
+    position: relative;
+    top: 0;
+    left: 0;
+    display: block;
+}
+.slick-track:before,
+.slick-track:after
+{
+    display: table;
+    content: '';
+}
+.slick-track:after
+{
+    clear: both;
+}
+.slick-loading .slick-track
+{
+    visibility: hidden;
+}
+
+.slick-slide
+{
+    display: none;
+    float: left;
+    height: 100%;
+    min-height: 1px;
+}
+[dir='rtl'] .slick-slide
+{
+    float: right;
+}
+.slick-slide img
+{
+    display: block;
+}
+.slick-slide.slick-loading img
+{
+    display: none;
+}
+.slick-slide.dragging img
+{
+    pointer-events: none;
+}
+.slick-initialized .slick-slide
+{
+    display: block;
+}
+.slick-loading .slick-slide
+{
+    visibility: hidden;
+}
+.slick-vertical .slick-slide
+{
+    display: block;
+    height: auto;
+    border: 1px solid transparent;
+}
+.slick-arrow.slick-hidden {
+    display: none;
+}
+/* carousel end */
 
 body {
-  padding: 20px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
@@ -45,10 +200,6 @@ body {
   margin-top: 20px;
 }
 
-/* .input-category{
-  visibility: hidden;
-}
-*/
 .noevent {
   pointer-events: none;
 }
@@ -57,6 +208,10 @@ input[type=file] {
   max-width: 100%;
 }
 
+/* .input-category{
+  visibility: hidden;
+}
+*/
 
 /*
 @font-face {
@@ -248,4 +403,12 @@ input[type=file] {
     padding-left: 0px !important;
     padding-right: 0px !important;
   }
+}
+
+@media (max-width: 492px){
+  .slick-slide {
+
+    margin: 0px 0px;
+
+}
 }
