--- a/naturet/views/experiences/detail.hbs
+++ b/naturet/views/experiences/detail.hbs
@@ -82,7 +82,7 @@
           <div class="mb-2">
             <h3>Mapa actividad</h3><small>Lorem ipsum dolor sit amet, consectetur adipiscing elit, Lorem ipsum dolor
               sit amet, consectetur adipiscing elit</small>
-            <div id="map"></div>
+            <div id="map" style="pointer-events: none;"></div>
             <hr>
           </div>
         </div>
