--- a/naturet/views/users/index.hbs
+++ b/naturet/views/users/index.hbs
@@ -1,58 +1,70 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.js"></script>
 
-<div class="container container-slider">
+<div class="container-slider mx-auto">
   <h2>ULtimas Experiencias</h2>
+  <hr>
   <section class="customer-experiencer slider">
-    {{#each experiences as |experience|}}
+    {{#each_upto experiences 9 }}
+
     <div class="slide slide1">
-      <a href="/experiences/{{experience.id}}">
+      <a href="/experiences/{{this.id}}">
         <div class="image-slide-inside">
         </div>
       </a>
-      <div class="p-2 border">
+      <div class="p-2">
 
-        <h5>{{experience.name}}</h5>
-        <p class="experience-card-description">{{experience.description}}</p>
-        <p><strong>{{experience.price}}</strong></p>
-        <small>#{{experience.categories.[0]}}</small>
-        <small>#{{experience.categories.[2]}}</small>
-        <small>#{{experience.categories.[3]}}</small>
+        <h5>{{this.name}}</h5>
+        <p class="experience-card-description">{{this.description}}</p>
+        <p><strong>{{this.price}}</strong></p>
+        <small>#{{this.categories.[0]}}</small>
+        <small>#{{this.categories.[2]}}</small>
+        <small>#{{this.categories.[3]}}</small>
+        <div>{{this.user.name}}</div>
 
       </div>
     </div>
 
-    {{/each}}
+    {{/each_upto}}
+    <div class="slide slide1">
+      <div class="image-slide-inside"><a href="more">more</a></div>
+    </div>
+
+  </section>
+</div>
+
+
+<div class="container-slider mx-auto slider-session">
+
+  <h2>Recomendados para ti</h2>
+  <hr>
+  <section class="customer-experiencer-session slider">
+    {{#each_upto experiences 4 }}
+
+    <div class="slide slide1">
+      <a href="/experiences/{{this.id}}">
+        <div class="image-slide-inside image-slide-session">
+          <div class="session-info">
+            <h5 class="experience-card-description">{{this.description}}</h5>
+                      <div>{{this.user.name}}</div>
+            <div class="image-slide-owner" style="background:url('{{this.user.photo}}')"></div>
+  
+          </div>
+        </div>
+      </a>
+      <div class="p-2">
+      </div>
+    </div>
+
+    {{/each_upto}}
     <div class="slide slide1">
       <div class="image-slide-inside"><a href="more">more</a></div>
     </div>
   </section>
 </div>
-{{!-- 
-<div class="container container-slider container-slider-2">
-  <h2>Recomendado para ti</h2>
-  <section class="customer-recommended slider">
-    
-    {{#each experiences as |experience|}}
-    <div class="slide slide1">
-      <a href="/experiences/{{experience.id}}">
-        <div class="image-slide-inside-recommended">
-           <h5>{{experience.name}}</h5>
-        <p class="experience-card-description">{{experience.description}}</p>
-        <p><strong>{{experience.price}}</strong></p>
-        <small>#{{experience.categories.[0]}}</small>
-        <small>#{{experience.categories.[2]}}</small>
-        <small>#{{experience.categories.[3]}}</small>
-        </div>
-      </a>
 
-    </div>
 
-    {{/each}}
-    <div class="slide slide1">
-      <div class="image-slide-inside"><a href="more">more</a></div>
-    </div>
-  </section>
-</div> --}}
+<!-- DEMO STYLES and NOTES BELOW -->
+
 
 <script>
   $(document).ready(function () {
@@ -69,9 +81,40 @@
           arrows: false,
           slidesToShow: 2
         }
+      },{
+        breakpoint: 520,
+        settings: {
+          arrows: false,
+          slidesToShow: 1
+        }
+      }, {
+        breakpoint: 1068,
+        settings: {
+          arrows: false,
+          slidesToShow: 3
+        }
+      }]
+    });
+  });
+  $(document).ready(function () {
+    $('.customer-experiencer-session').slick({
+      swipe: false,
+      slidesToShow: 4,
+      slidesToScroll: 1,
+      arrows: false,
+      dots: false,
+      infinite: false,
+      pauseOnHover: false,
+      responsive: [{
+        breakpoint: 768,
+        settings: {
+          arrows: false,
+          slidesToShow: 2
+        }
       }, {
         breakpoint: 520,
         settings: {
+          swipe: true,
           arrows: false,
           slidesToShow: 1
         }
@@ -85,33 +128,4 @@
     });
   });
 
-   $(document).ready(function () {
-    $('.customer-recommended').slick({
-      slidesToShow: 4,
-      slidesToScroll: 1,
-      arrows: true,
-      dots: false,
-      infinite: false,
-      pauseOnHover: false,
-      responsive: [{
-        breakpoint: 768,
-        settings: {
-          arrows: false,
-          slidesToShow: 2
-        }
-      }, {
-        breakpoint: 520,
-        settings: {
-          arrows: false,
-          slidesToShow: 1
-        }
-      }, {
-        breakpoint: 1068,
-        settings: {
-          arrows: false,
-          slidesToShow: 3
-        }
-      }]
-    });
-  });
 </script>
