--- a/naturet/views/users/profile.hbs
+++ b/naturet/views/users/profile.hbs
@@ -111,33 +111,50 @@
 
         <hr>
         <div class="mb-2 col-6">
-          <h4>Your Favourites Experiences</h4><small>Lorem ipsum dolor sit amet, consectetur adipiscing elit,</small>
+          <h4>Your Favourites Experiences</h4>
+          {{#each user.following as |experience| }}
+          <ul>
+            <li data-id="{{experience.id}}">
+              <div>
+                <a href="/experiences/{{ experience.id }}">{{experience.name}}</a>
+              </div>
+            </li>
+          </ul>
+          {{/each}}
         </div>
         <hr>
         <div class="mb-2 col-6">
-          <h4>Your Purchased Experiences</h4><small>Lorem ipsum dolor sit amet, consectetur adipiscing elit,</small>
+          <h4>Your Purchased Experiences</h4>
+          {{#each user.purchased as |experience| }}
+          <ul>
+            <li data-id="{{experience.id}}">
+              <div>
+                <a href="/experiences/{{ experience.id }}">{{experience.name}}</a>
+              </div>
+            </li>
+          </ul>
+          {{/each}}
         </div>
-
         <hr class="mt-5">
 
         {{#if session.creator}}
-          <h1>Your creator Data</h1>
-          <div>{{session.expertise}}</div>
-          <div>{{session.enterpriseEmail}}</div>
-          <div>{{session.politic}}</div>
-          <div>{{session.enterpriseDescription}}</div>
-          <div>{{session.acreditation}}</div>
-          <div><img src="{{session.enterprise_picture}}"></div>
-          <h1>Your experiences created</h1>
-          <hr>
+        <h1>Your creator Data</h1>
+        <div>{{session.expertise}}</div>
+        <div>{{session.enterpriseEmail}}</div>
+        <div>{{session.politic}}</div>
+        <div>{{session.enterpriseDescription}}</div>
+        <div>{{session.acreditation}}</div>
+        <div><img src="{{session.enterprise_picture}}"></div>
+        <h1>Your experiences created</h1>
+        <hr>
         {{/if}}
 
         {{#if session.creator}}
-          <h1>Your seller profile</h1>
-          <img src="{{session.photo}}">
-          <h3>{{session.name}}</h3>
-          <hr>
-          <a class="btn btn-primary mb-3" href="/experiences/create">New experience</a>
+        <h1>Your seller profile</h1>
+        <img src="{{session.photo}}">
+        <h3>{{session.name}}</h3>
+        <hr>
+        <a class="btn btn-primary mb-3" href="/experiences/create">New experience</a>
         {{/if}}
 
       </form>
