--- a/naturet/views/users/index.hbs
+++ b/naturet/views/users/index.hbs
@@ -1,5 +1,8 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.js"></script>
 
+<input type='text' name='' id="filter-word" >
+<button id="filter-button">filtrar</button>
+
 <div class="container-slider mx-auto">
   <h2>ULtimas Experiencias</h2>
   <hr>
@@ -128,4 +131,8 @@
     });
   });
 
+</script>
+
+<script src="/js/filters.js">
+  
 </script>
