--- a/naturet/views/experiences/detail.hbs
+++ b/naturet/views/experiences/detail.hbs
@@ -132,8 +132,12 @@
         <div class="form-actions">
           <h2 for="docomment">Escribe tu comentario</h2>
           <textarea class="form-control mb-4" name="message" rows=2></textarea>
+           {{#if errors.message }}
+            <h2>{{ errors.message }}</h2>
+           {{/if}}
           <button class="btn btn-primary btn-lg mb-2 " type="submit">enviar</button>
         </div>
+       
       </form>
       <hr>
       {{#each experience.comments}}
